[metadata]
name = napari-dv
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = MIT
url = https://github.com/tlambert03/napari-dv
description = Deltavision/MRC file reader for napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/tlambert03/napari-dv/issues
    Documentation = https://github.com/tlambert03/napari-dv#README.md
    Source Code = https://github.com/tlambert03/napari-dv
    User Support = https://github.com/tlambert03/napari-dv/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    mrc>=0.1.5


[options.entry_points] 
napari.plugin = 
    napari-dv = napari_dv
