[metadata]
name = napari_dv
description = Deltavision/MRC file reader for napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/napari-dv
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/tlambert03/napari-dv/issues
    Documentation = https://github.com/tlambert03/napari-dv#README.md
    Source Code = https://github.com/tlambert03/napari-dv
    User Support = https://github.com/tlambert03/napari-dv/issues

[options]
packages = find:
install_requires =
    mrc>=0.2.0
    napari-plugin-engine>=0.1.4
python_requires = >=3.7
include_package_data = True

[options.entry_points]
napari.manifest =
    napari-dv = napari_dv:napari.yaml

[options.extras_require]
testing =
    numpy
    pytest
    pytest-cov

[options.package_data]
* = *.yaml
